--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ psutil
 pybase64
 pymongo
 pycountry 
-python-telegram-bot
+python-telegram-bot==13.15
 pyrofork==2.2.11
 python-dotenv
 python-magic
