--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,8 @@ bencoding
 beautifulsoup4
 cinemagoer
 cryptography
-cfscrape
+cfscrape==2.1.1
+urllib3==1.26.6
 cloudscraper
 dnspython
 feedparser
@@ -39,7 +40,6 @@ telegraph
 tenacity
 tgcrypto
 typing_extensions
-urllib3
 uvloop
 xattr
 yt-dlp
