--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ pybase64
 pymongo
 pycountry 
 python-telegram-bot==13.15
-pyrofork==2.2.11
+git+https://github.com/hydrogram/hydrogram.git@dev
 python-dotenv
 python-magic
 playwright
